# uwa-jetski-code

./: .clangd  .gitmodules  README.md  activate_scripts.sh
projects/auxiliary_controller/: CMakeLists.txt  README.md  sdkconfig.defaults
projects/auxiliary_controller/components/aux_panel_ui/: CMakeLists.txt  aux_panel_ui.c
projects/auxiliary_controller/components/aux_panel_ui/include/: aux_panel_ui.h
projects/auxiliary_controller/components/gps/: CMakeLists.txt  Kconfig  Kconfig.projbuild  gps.c  idf_component.yml  lwgps_opts.h  project_include.cmake
projects/auxiliary_controller/components/gps/include/: gps.h
projects/auxiliary_controller/components/joystick/: CMakeLists.txt  Kconfig.projbuild  joystick.c
projects/auxiliary_controller/components/joystick/include/: joystick.h
projects/auxiliary_controller/components/rudder_pot/: CMakeLists.txt  Kconfig  rudder_pot.c
projects/auxiliary_controller/components/rudder_pot/include/: rudder_pot.h
projects/auxiliary_controller/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
projects/main_controller/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.bak_spi_disabled  sdkconfig.defaults
projects/main_controller/components/: can
projects/main_controller/components/app_state/: CMakeLists.txt  app_state.c
projects/main_controller/components/app_state/include/: app_state.h
projects/main_controller/components/config/: CMakeLists.txt  config.c
projects/main_controller/components/config/include/: config.h
projects/main_controller/components/control/: CMakeLists.txt  control.c
projects/main_controller/components/control/include/: control.h
projects/main_controller/components/datalog/: CMakeLists.txt  datalog.c  idf_component.yml
projects/main_controller/components/datalog/include/: datalog.h
projects/main_controller/components/height/: CMakeLists.txt  Kconfig.projbuild  height.c  idf_component.yml
projects/main_controller/components/height/include/: height.h
projects/main_controller/components/imu/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml  imu.c
projects/main_controller/components/main_panel_ui/: CMakeLists.txt  main_panel_ui.c
projects/main_controller/components/mpu9250/: .build.yml  .component_hash  .gitignore  CHECKSUMS.json  CMakeLists.txt  LICENSE  README.md  idf_component.yml
projects/main_controller/components/mpu9250_dmp/: CMakeLists.txt  esp32_mpu9250_i2c.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c
projects/main_controller/components/mpu9250_dmp/include/: esp32_mpu9250_i2c.h
projects/main_controller/components/mpu9250_dmp/src/: esp32_mpu9250_i2c.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c
projects/main_controller/components/rudder/: CMakeLists.txt  rudder.c
projects/main_controller/components/runtime_health/: CMakeLists.txt  runtime_health.c
projects/main_controller/components/servo_drive/: CMakeLists.txt  Kconfig  Kconfig.projbuild  servo_drive.c
projects/main_controller/components/vehicle_inputs/: CMakeLists.txt  vehicle_inputs.c
projects/main_controller/components/walltime/: CMakeLists.txt  walltime.c
projects/main_controller/components/webui/: CMakeLists.txt  Kconfig.projbuild  app.css  app.js  index.html  live.js  viewer.html  webui.c
projects/main_controller/components/webui/include/: webui.h
projects/main_controller/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
projects/tab5_dashboard/: .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
projects/tab5_dashboard/components/: can_ui_bridge
projects/tab5_dashboard/components/tab5_bringup/: CMakeLists.txt  tab5_bringup.c
projects/tab5_dashboard/components/tab5_bringup/include/: tab5_bringup.h
projects/tab5_dashboard/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
projects/tab5_dashboard/main/ui/: dashboard_font.c  dashboard_font.h
projects/ws_lcd_dashboard/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
projects/ws_lcd_dashboard/components/: dashboard_app  dashboard_ui
projects/ws_lcd_dashboard/components/can/: Kconfig.projbuild  can.c
projects/ws_lcd_dashboard/components/ws_display/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  waveshare_rgb_lcd_port.c  ws_display.c  ws_display_font.c
projects/ws_lcd_dashboard/components/ws_display/include/: ws_display.h
projects/ws_lcd_dashboard/components/ws_display/priv_include/: waveshare_rgb_lcd_port.h  ws_display_internal.h
projects/ws_lcd_dashboard/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
scripts/: _completions.sh  _project_cli.py  build.py  build.sh  choose_port.py  clean.py  flash.py  flash.sh  merge_compile_commands.py  monitor.py  read_with_pty.py  save_defconfig.py  setup_clangd.py
shared_components/can/: CMakeLists.txt  Kconfig.projbuild  can.c
shared_components/can/include/: can.h  can_ids.h
shared_components/can_ui_bridge/: CMakeLists.txt  can_ui_bridge.c
shared_components/can_ui_bridge/include/: can_ui_bridge.h
shared_components/dashboard_app/: CMakeLists.txt  dashboard_app.c
shared_components/dashboard_app/include/: dashboard_app.h
shared_components/dashboard_can/: CMakeLists.txt  dashboard_can.c
shared_components/dashboard_can/include/: dashboard_can.h
shared_components/dashboard_demo/: CMakeLists.txt  dashboard_demo.c
shared_components/dashboard_demo/include/: dashboard_demo.h
shared_components/dashboard_ui/: CMakeLists.txt  Kconfig.projbuild  dashboard_demo.c  dashboard_demo.h  dashboard_ui.c
shared_components/dashboard_ui/include/: dashboard_ui.h
shared_components/encoder_can/: CMakeLists.txt  Kconfig.projbuild  encoder_can.c
shared_components/encoder_can/include/: encoder_can.h
shared_components/lvgl_status_display/: CMakeLists.txt  lvgl_status_display.c
shared_components/lvgl_status_display/include/: lvgl_status_display.h
shared_components/status_ui/: CMakeLists.txt  status_ui.c
shared_components/status_ui/include/: status_ui.h
useful/: encoder_protocol_notes.md
(+12 files in other folders)
